wishlist icon spacing issue on compare product's page #6793

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -2500,7 +2500,7 @@
 
     .wishlist-icon {
         top: 5px;
-        right: 60px;
+        right: 52px;
         position: absolute;
         display: inline-block;
     }
